--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -37,18 +37,26 @@
     
     <section class="wishlist">
         <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
-            <img src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
+            <img class="thumbnail" src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
             <h2>T1 VARSITY JACKET</h2>
+            <h3 class="moneyIcon">$</h3>
         </a>
 
         <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
-            <img src="https://cdn.rgpub.io/public/live/map/riftbound/latest/OGN/cards/OGN-079a/full-desktop.avif">
+            <img class="thumbnail" src="https://cdn.rgpub.io/public/live/map/riftbound/latest/OGN/cards/OGN-079a/full-desktop.avif">
             <h2>RIFTBOUND CARD [CUSTOM PAINTED]</h2>
+            <h3 class="moneyIcon">$</h3>
         </a>  
         
         <a class="item" href="https://a.co/d/3zywr5b" target="_blank" rel="noopener">
-            <img src="https://m.media-amazon.com/images/I/81GDrps+mwL._SL1500_.jpg">
+            <img class="thumbnail" src="https://m.media-amazon.com/images/I/81GDrps+mwL._SL1500_.jpg">            
             <h2>FEBREEZE AIR FRESHENER REFILLS</h2>
+            <h3 class="moneyIcon">$$</h3>
         </a>
+
+        <a class="item" href="https://www.ecohome.net/en/companies/showcases/3687/quantum-passivhaus-fire-route-67/" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
+            <h2>PRE-FABRICATED HOUSE</h2>
+        </a>          
     </section>
 </main>    
