--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -42,7 +42,7 @@
             <h3 class="moneyIcon">$</h3>
         </a>
 
-        <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
+        <a class="item" href="https://hypernotepad.com/n/f591b0e970daed47" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://cdn.rgpub.io/public/live/map/riftbound/latest/OGN/cards/OGN-079a/full-desktop.avif">
             <h2>RIFTBOUND CARD [CUSTOM PAINTED]</h2>
             <h3 class="moneyIcon">$</h3>
@@ -57,6 +57,13 @@
         <a class="item" href="https://www.ecohome.net/en/companies/showcases/3687/quantum-passivhaus-fire-route-67/" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
             <h2>PRE-FABRICATED HOUSE</h2>
+            <h3 class="moneyIcon">$</h3>
         </a>          
+
+        <a class="item" href="https://www.ecohome.net/en/companies/showcases/3687/quantum-passivhaus-fire-route-67/" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
+            <h2>PRE-FABRICATED HOUSE</h2>
+            <h3 class="moneyIcon">$</h3>
+        </a>                  
     </section>
 </main>    
