--- a/yorku/desn4123/project1.html
+++ b/yorku/desn4123/project1.html
@@ -82,6 +82,8 @@
         In the relationships where I have physical and online contact, I find myself receiving much more frequent interactions with social media posts in contrast to professional connections. 
         <br></br>
         These more frequent interactions come from groups where I see myself receiving many psychological benefits. These benefits—Entertainment, Mental Health, Company, Social Battery, Opinions—come at a perceived cost of practically nothing but my time and attention.
+        <br></br>
+        The reason why it's like this is most likely because of the varying levels of trust. My online interactions feel as if they only exist for surface-level exchanges, whereas my physical/online connections carry a deeper sense of trust and mutual investment.
     </p>        
 
     <br></br>
@@ -129,3 +131,4 @@
     <br></br>
     </section>
 </main>    
+
