--- a/yorku/desn4123/project1.html
+++ b/yorku/desn4123/project1.html
@@ -30,7 +30,7 @@
         <!-- shut up i know this is scuffed-->
         <!-- IM LAZY OKAY???-->
         <br></br>
-        <p class="pgTxt">In my social networks today, I’ve found that my interactions with social media have some sort of transactionality from both parties. This is not to say I have friends on social media purely because I get “likes” or “affirmation,” but to say that there are things I give and receive from these connections.
+        <p class="pgTxt">In my social networks today, I’ve found that my interactions with social media have some sort of transactionality from both parties. This is not to say I have friends on social media purely because I get “likes” or “affirmation,” but to say that there are things I give and receive from online connections.
         <br></br>
         In an ‘X’ reply (Formerly ‘Twitter’) to a post on streamer relationships and “real” friends, Nick De Cesare—an E-Sports League of Legends personality—discusses an essential point and reasoning behind why online social relationships are “purely interactional.” He states that online relationships are purely transactional due to the lack of physical interaction, and that people are not being their real selves when they’re in the mindset of gaining or losing something.
         </p>
@@ -55,9 +55,9 @@
         <br></br>
         
     <p class="pgTxt">
-        When I designed this “social network shopping site,” I divided my connections into two main platforms: LinkedIn and Discord. LinkedIn is dominated by design-related connections and interactions; I rarely used it before studying design, but it has become a tool for building professional networks and job prospects. In contrast, Discord is where my close and casual relationships have and still exist.
+        When I designed this “social network shopping site,” I divided my connections into two main platforms: LinkedIn and Discord. LinkedIn is dominated by design-related connections and interactions; I rarely used it before studying design, but it has become a tool for building professional networks and job prospects.
         <br></br>
-        In the past, I cared mainly about close and casual relationships, which is what I used Discord for, and is what I still use today. But now in the present, I’ve added LinkedIn to my social network.
+        In the past, I cared mainly about close and casual relationships, which is what I used Discord for, and is what I still use today. But now in the present, I’ve created a professional version of myself.
     </p>     
 
         <br></br>
@@ -97,7 +97,7 @@
         <br></br>
         I think it is important to note that I don’t treat my friendships as transactions. In solely online connections like the LinkedIn ‘Roblox Recruiters,’ I only see them as a professional opportunity to get to a future job. I know and see them only for their value in what they could provide to me because I am desensitized to online connections. 
         <br></br>
-        In contrast, I have strong emotional feelings with my close friends; I do not see them for the benefits they provide, or rather, it’s because the benefits are more difficult to perceive.
+        In contrast, I have strong emotional feelings with my close friends; I do not see them for the benefits they provide, or rather, it’s because the benefits are more difficult to perceive. In any case, the benefits seem to come naturally with the relationship, rather than being why we connect.
     </p>        
 
     <br></br>
@@ -109,9 +109,9 @@
     <p class="pgTxt">
         Looking back on my cost-benefit ratios on social media posting and consumption, I realize that there was also another cost—my personality and sense of self. When I post on social media, I write in a tone that is not necessarily mine. I interacted with content to build a fake image that seems ideal to recruiters and hirers. I am not true to my actual voice online in fear of being seen as “too weird” or personal.
 <br></br>
-        This mapping highlights the difference between my transactional connections and genuine relationships. It suggests that even those who are close and important online have some sort of transactionality, which makes us question how authentic online relationships are. 
+        This mapping highlights the difference between transactional connections and genuine relationships. It suggests that all relationships have some sort of transactionality, which makes us question how authentic our online relationships are and how we are benefiting/benefited from others.
         <br></br>
-        In conclusion, I’ve found that many professional online identities rarely feel authentic (mine included) and are commonly shaped by percieved transactions rather than real expression.
+        In conclusion, many professional online identities—mine included—rarely feel fully authentic and are often shaped by perceived transactions. I believe that truly 'real' relationships come from genuine connection, not from thinking about what we can gain from them.   
     </p>        
 
     <br></br>
@@ -131,4 +131,5 @@
     <br></br>
     </section>
 </main>    
+
 
