--- a/yorku/desn4123/project1.html
+++ b/yorku/desn4123/project1.html
@@ -125,11 +125,13 @@
 
     <div class="bib">
     <h2>References</h2>
+        <h3>I have not used any AI tools or technologies in the project.</h3>
     <br>
         <p class="bib2">LS [@LSXYZ9]. (2023, September 25). Yes that’s the unfortunate reality. Most relationships are purely transactional in the space and I think a lot if it comes from being desensitized … [Tweet]. X (formerly Twitter). https://x.com/LSXYZ9/status/1949592237408698849</p>
     </div>
     <br></br>
     </section>
 </main>    
+
 
 
