--- a/yorku/desn3005/arexperience.html
+++ b/yorku/desn3005/arexperience.html
@@ -13,7 +13,7 @@
 
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
-      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #342fbd; }
+      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #ffffff; }
       model-viewer { width: 100%; max-width: 600px; height: 80vh; }
     </style>    
   </head>
