--- a/yorku/desn3005/arexperience.html
+++ b/yorku/desn3005/arexperience.html
@@ -14,14 +14,14 @@
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #ffffff; }
-      model-viewer { width: 100%; max-width: 600px; height: 80vh; }
+      model-viewer { width: 100%; max-width: 100%; height: 80vh; }
     </style>    
   </head>
 
   <body>
     <model-viewer 
       src="texturedtower.glb"
-      ios-src="texturedtower.usdz"
+      ios-src="compressedtower.usdz"
       alt="Tower of Escher by Richard Lau"
       camera-controls 
       auto-rotate 
