--- a/yorku/desn3005/arexperience.html
+++ b/yorku/desn3005/arexperience.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="../projects.css">
     <link rel="stylesheet" href="style.css">
 
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="SIAFF AR EXPERIENCE">
+  <meta property="og:description" content="Augmented Reality Experience, coded by Richard Lau.">
+  <meta property="og:url" content="https://richardlau.ca/yorku/desn3005/arexperience">
+  <meta property="og:type" content="website">    
+
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #ffffff; }
