--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -26,8 +26,8 @@
     <section class="hero">
         <header>
             <h1>Welcome to Richy's Wishlist :]</h1>
-            <p>I've taken procrastination to the next level—not only am I not doing all my projects, but I've reinvested that time into something as pointless as a pretty wishlist.</p>
-            <p>P.S: I'm not too interested in MTG at the moment, though Riftbound is coming up!</p>        
+            <p>I've reinvested work time into something as pointless as a pretty wishlist.</p>
+            <p class="italics">P.S. I'm not too interested in MTG at the moment, though Riftbound is coming up! Though, I would prefer if you did something personal rather than buying me stuff <3</p>        
         </header>
     </section>
 
@@ -39,31 +39,50 @@
         <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
             <h2>T1 VARSITY JACKET</h2>
-            <h3 class="moneyIcon">$</h3>
+            <h4 class="desc">"Dear Secret Santa"</h4>
+            <h3 class="moneyIcon">$$$$$</h3>
         </a>
 
         <a class="item" href="https://hypernotepad.com/n/f591b0e970daed47" target="_blank" rel="noopener">
-            <img class="thumbnail" src="https://cdn.rgpub.io/public/live/map/riftbound/latest/OGN/cards/OGN-079a/full-desktop.avif">
-            <h2>RIFTBOUND CARD [CUSTOM PAINTED]</h2>
+            <img class="thumbnail" src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/game_data_live/fb6316c39ad2a00d65f4b6cc823cbdd61cadda3b-1488x2078.png?auto=format&fit=fill&q=80&w=435">
+            <h2>RIFTBOUND CARD [YOUR CUSTOM PROXY]</h2>
+            <h4 class="desc">If you draw me a Riftbound card, I will suck you off, eat you out, or both.</h4>
             <h3 class="moneyIcon">$</h3>
         </a>  
+
+        <a class="item" href="" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://ir.ozone.ru/s3/multimedia-1-a/w500/7124657914.jpg">
+            <h2>HAND CREAM</h2>
+            <h4 class="desc">I have a FarmStay hand cream, Berry Blossom. I like these kinds of scents.</h4>
+            <h3 class="moneyIcon">$</h3>
+        </a>   
+        
+        <a class="item" href="" target="_blank" rel="noopener">
+            <img class="thumbnail" src="secretsanta-media/IMG_3778.jpg">
+            <h2>PERSONALIZED GIFTS ♥</h2>
+            <h4 class="desc">Because sometimes buying things on a list feels like an obligation.</h4>
+            <h3 class="moneyIcon">$</h3>
+        </a>         
         
         <a class="item" href="https://a.co/d/3zywr5b" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://m.media-amazon.com/images/I/81GDrps+mwL._SL1500_.jpg">            
             <h2>FEBREEZE AIR FRESHENER REFILLS</h2>
+            <h4 class="desc">This is useful because I'm all out</h4>
             <h3 class="moneyIcon">$$</h3>
         </a>
 
         <a class="item" href="https://www.ecohome.net/en/companies/showcases/3687/quantum-passivhaus-fire-route-67/" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
             <h2>PRE-FABRICATED HOUSE</h2>
-            <h3 class="moneyIcon">$</h3>
+            <h4 class="desc">If you don't get me this, are we even friends?</h4>
+            <h3 class="moneyIcon">$$$$$</h3>
         </a>          
 
-        <a class="item" href="https://www.ecohome.net/en/companies/showcases/3687/quantum-passivhaus-fire-route-67/" target="_blank" rel="noopener">
-            <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
-            <h2>PRE-FABRICATED HOUSE</h2>
-            <h3 class="moneyIcon">$</h3>
-        </a>                  
+        <a class="item" href="" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQgg66DVPoDZVAK0VeJ-yRqCAs3Tm4WBJPPESmZjlOHi8ZpxqHLP1qYsD1ikuhojGaLDDTOJzVFy1WNM2Fd8awW63bbRz7rfaQUiNe38O2PvRzCw2DB7qrvUQ">
+            <h2>IPHONE X CASE?</h2>
+            <h4 class="desc">Don't need—Simon is getting me one, I think?</h4>
+            <h3 class="moneyIcon">$$</h3>
+        </a>        
     </section>
 </main>    
