--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -40,7 +40,7 @@
             <img class="thumbnail" src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
             <h2>T1 VARSITY JACKET</h2>
             <h4 class="desc">"Dear Secret Santa"</h4>
-            <h3 class="moneyIcon">$$$$$</h3>
+            <h3 class="moneyIcon">:]</h3>
         </a>
 
         <a class="item" href="https://hypernotepad.com/n/f591b0e970daed47" target="_blank" rel="noopener">
@@ -56,18 +56,39 @@
             <h4 class="desc">I have a FarmStay hand cream, Berry Blossom. I like these kinds of scents.</h4>
             <h3 class="moneyIcon">$</h3>
         </a>   
+
+        <a class="item" href="https://a.co/d/1MJJDAv" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://i5.walmartimages.com/asr/f1f9ca17-57c4-49dc-88e3-3fb7158d2eb1.d8da4f16e995e613e2ecf823443eddfc.jpeg">
+            <h2>GARBAGE GRABBER TOOL</h2>
+            <h4 class="desc">Anyone interested in going on a garbage picking-up hike? /gen</h4>
+            <h3 class="moneyIcon">$$</h3>
+        </a>          
         
         <a class="item" href="" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/IMG_3778.jpg">
             <h2>PERSONALIZED GIFTS ♥</h2>
-            <h4 class="desc">Because sometimes buying things on a list feels like an obligation.</h4>
+            <h4 class="desc">Because sometimes buying things on a list just feels lazy.</h4>
             <h3 class="moneyIcon">$</h3>
         </a>         
+
+        <a class="item" href="https://arcane.fandom.com/wiki/Pretend_Like_It%27s_the_First_Time" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://images.steamusercontent.com/ugc/35560869619347186/838B1B72FC858C0F925870A47B457F50741B2617/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false">
+            <h2>DROP ME INTO ANOTHER DIMENSION RAHHHH</h2>
+            <h4 class="desc">PLEASE PLEASE PLEASE—"Love Sabrina." /hj</h4>
+            <h3 class="moneyIcon">💔</h3>
+        </a>         
+
+        <a class="item" href="https://a.co/d/dZja86n" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://m.media-amazon.com/images/I/61VEi-JnLbL._AC_SL1500_.jpg">
+            <h2>WIRELESS HEADPHONES</h2>
+            <h4 class="desc">Check Amazon Warehouse for deals on nice brands—pref stylistic ones ofc.</h4>
+            <h3 class="moneyIcon">$$$$$</h3>
+        </a>            
         
         <a class="item" href="https://a.co/d/3zywr5b" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://m.media-amazon.com/images/I/81GDrps+mwL._SL1500_.jpg">            
             <h2>FEBREEZE AIR FRESHENER REFILLS</h2>
-            <h4 class="desc">This is useful because I'm all out</h4>
+            <h4 class="desc">This is useful because I'm all out.</h4>
             <h3 class="moneyIcon">$$</h3>
         </a>
 
@@ -75,7 +96,7 @@
             <img class="thumbnail" src="https://www.ecohome.net/media/projects/photos/88/f6/88f62e9dcfaa3c26bda102ec61135e5fea25b43b/thumbs/FqIVdU-gIzwS_1500x1200_Hs5Ty64D.jpg">
             <h2>PRE-FABRICATED HOUSE</h2>
             <h4 class="desc">If you don't get me this, are we even friends?</h4>
-            <h3 class="moneyIcon">$$$$$</h3>
+            <h3 class="moneyIcon">:]</h3>
         </a>          
 
         <a class="item" href="" target="_blank" rel="noopener">
