--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -27,7 +27,7 @@
         <header>
             <h1>Welcome to Richy's Wishlist :]</h1>
             <p>I've reinvested work time into something as pointless as a pretty wishlist.</p>
-            <p class="italics">P.S. I'm not too interested in MTG at the moment, though Riftbound is coming up! Though, I would prefer if you did something personal rather than buying me stuff <3</p>        
+            <p class="italics">P.S. I'm not too interested in MTG at the moment, though Riftbound is coming up!</p>        
         </header>
     </section>
 
