--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -67,7 +67,7 @@
         <a class="item" href="" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/IMG_3778.jpg">
             <h2>PERSONALIZED GIFTS ♥</h2>
-            <h4 class="desc">Because sometimes buying things on a list just feels lazy.</h4>
+            <h4 class="desc">Because you love me just that much!</h4>
             <h3 class="moneyIcon">$</h3>
         </a>         
 
@@ -81,7 +81,7 @@
         <a class="item" href="https://x.com/andycollectz/status/1982921584324293000?s=46" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/riftbound_worlds.png">
             <h2>RIFTBOUND 2025 WORLDS BUNDLE</h2>
-            <h4 class="desc">I will blow you. This is genuinely something I WANT WANT.</h4>
+            <h4 class="desc">I will blow you. This is something I WANT WANT.</h4>
             <h3 class="moneyIcon">$$$$$$$$$$</h3>
         </a>              
 
