--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -76,7 +76,14 @@
             <h2>DROP ME INTO ANOTHER DIMENSION RAHHHH</h2>
             <h4 class="desc">PLEASE PLEASE PLEASE—"Love Sabrina." /j</h4>
             <h3 class="moneyIcon">💔</h3>
-        </a>                  
+        </a>       
+        
+        <a class="item" href="https://a.co/d/1jBZUew" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://i.etsystatic.com/61217821/r/il/7d6f56/7396660843/il_1140xN.7396660843_3zvc.jpg">
+            <h2>CARD SLEEVES/DECK BOXES</h2>
+            <h4 class="desc">Whatever you'd think I'd like!</h4>
+            <h3 class="moneyIcon">$$</h3>
+        </a>         
         
         <a class="item" href="https://x.com/andycollectz/status/1982921584324293000?s=46" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/riftbound_worlds.png">
