--- a/yorku/thea3135/theatreTO.html
+++ b/yorku/thea3135/theatreTO.html
@@ -17,10 +17,10 @@
 
         <header class="navigationBar">
             <nav>
-            <a href="#" id="logo">TheatreTO</a>
+            <a href="https://richardlau.ca/yorku/thea3135/theatreTO" id="logo">TheatreTO</a>
             <ul class="nav-links">
                 <li><a href="#Community Content">Community Content</a></li>
-                <li><a href="#Internal Login">Internal Login</a></li>
+                <li><a href="https://www.richardlau.ca/yorku/thea3135/internal">Internal Login</a></li>
                 <li id="ticketBtn"><a href="#Buy Tickets">Buy Tickets</a></li>
             </ul>
             </nav>
