--- a/yorku/thea3135/internal.html
+++ b/yorku/thea3135/internal.html
@@ -8,12 +8,30 @@
     <title>TheatreTO</title>
     <link rel="icon" href="../media/RL.png" type="image/png">
     <link rel="stylesheet" href="../projects.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="internal.css">
 </head>
 
 
 
     <body>
+<!-- temp block
+        <div class="login-box" id="login">
+            <div id="enterField">
+                <h2>Internal Login Portal</h2>
+                <div id="inputs" class="regular">
+                    <input type="text" id="username" placeholder="Username" />
+                    <input type="password" id="password" placeholder="Password" />
+                    <button onclick="checkLogin()">Submit</button>
+                </div>
+                <aside id="txtLogin">
+                    <p id="error" class="error">Incorrect username or password.</p>
+                    <p class="book" id="loginInfo">
+                    Note for THEA3135: <br>Username: officehours@toasterlab.com Password: thea3135<br></br>
+                    This is a simple security barrier. While it would be more optimal to use third party encrypted applications such as Netlify for webpage security, I've opted to used the google suite for secure file sharing paired with a basic html/css/js blocker to initially hide these forms.</p>
+                </div>
+            </div>
+        </div>  
+-->             
 
         <header class="navigationBar">
             <nav>
@@ -28,13 +46,21 @@
 
         <aside id="announcement">
             <p>Purchase early bird tickets to <span class="italics">‘Alice in Wonderland’</span> before Nov 5th, 2025 for 50% off!</p>
-        </aside>
+        </aside>        
 
         <main>
 
-            <section id="heroSection">
-                
-            </section>
+            <section id="contactSheet">
+                <div class="headingStyle">
+                    <h1 class="header-style1">Information Table (Contact Sheet)</h1>
+                    <p class="book"><a href="https://docs.google.com/spreadsheets/d/1Bk3hSBwNKqAKcuVaxxgIvl6m0niS-kRXl5u2ojSYXHk">This list</a> contains a secure list of emails, phone numbers, and names.</p>
+                </div>
+<iframe
+  src="https://docs.google.com/spreadsheets/d/1Bk3hSBwNKqAKcuVaxxgIvl6m0niS-kRXl5u2ojSYXHk/htmlembed?gid=0&headers=false"
+  width="100%"
+  height="800"
+  style="border:none; overflow:hidden;"
+  ></iframe>
         </main>
 
         <footer>
@@ -46,5 +72,6 @@
                 </ul>          
         </footer>    
 
+        <script src="internal.js"></script>
   </body>
 </html>
