--- a/yorku/thea3135/community-content.html
+++ b/yorku/thea3135/community-content.html
@@ -51,7 +51,7 @@
             <section id="sharingSection">
                 <div class="headingStyle">
                     <h1 class="header-style1">Community Content Sharing</h1>
-                    <p class="book">This is a community folder of shared content.<br>All files are moderated regularly. Do not share sensitive information or illegal content.</p>
+                    <p class="book">This is a <a href="https://drive.google.com/drive/folders/1Aq8cBlfUf_FlQXB6VsOi4TA6JxmEA_vS?usp=sharing">community folder</a> of shared content.<br>All files are moderated regularly. Do not share sensitive information or illegal content.</p>
                 </div>
 
                 <iframe 
