--- a/home.html
+++ b/home.html
@@ -32,8 +32,8 @@
         <ul>
           <li><a href="https://richardlau.ca/home">home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="#">sparks</a></li>
-          <li><a href="#">resume</a></li>
+          <li><a href="#">fishbones</a></li>
+          <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
         </ul>
       </nav>
     </header>
@@ -51,10 +51,10 @@
       </div>
 
   <!-- This is our hero section. -->
-  <section class="mainpage fadeinup">
-    <div class="mainTitle fadeinup">
+  <section class="mainpage">
+    <div class="mainTitle">
       <h1>ENTER:<wbr>RICHARD</wbr></h1>
-      <img src="media/annoyingDog.gif" alt="8-Bit Dancing Dog." class="dog fadeinup">      
+      <img src="media/annoyingDog.gif" alt="8-Bit Dancing Dog." class="dog">      
     </div>
     <div class="subTitle"> 
       <div class="nowrap-container">  
