--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -25,8 +25,8 @@
         <ul>
           <li><a href="https://richardlau.ca/home">home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="#">sparks</a></li>
-          <li><a href="#">resume</a></li>
+          <li><a href="#">fishbones</a></li>
+          <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
         </ul>
       </nav>
     </header>
