--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -87,9 +87,16 @@
         
         <a class="item" href="https://x.com/andycollectz/status/1982921584324293000?s=46" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/riftbound_worlds.png">
-            <h2>RIFTBOUND 2025 WORLDS BUNDLE</h2>
+            <h2>RIFTBOUND STUFF</h2>
             <h4 class="desc">I will blow you. This is something I WANT WANT.</h4>
             <h3 class="moneyIcon">$$$$$$$$$$</h3>
+        </a>              
+
+        <a class="item" href="https://www.amazon.ca/gp/product/B0BLX8VW48/ref=ox_sc_act_title_1?smid=A29GE3J9QDHI9F&th=1" target="_blank" rel="noopener">
+            <img class="thumbnail" src="https://m.media-amazon.com/images/I/616bJg2BZaL._AC_SY300_SX300_QL70_ML2_.jpg">
+            <h2>RIFTBOUND STUFF</h2>
+            <h4 class="desc">I need ipad pro 2018 A1980 11" accessories. like a new screen protector</h4>
+            <h3 class="moneyIcon">$$</h3>
         </a>              
 
         <a class="item" href="" target="_blank" rel="noopener">
