--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -46,7 +46,7 @@
         <a class="item" href="https://hypernotepad.com/n/f591b0e970daed47" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/game_data_live/fb6316c39ad2a00d65f4b6cc823cbdd61cadda3b-1488x2078.png?auto=format&fit=fill&q=80&w=435">
             <h2>RIFTBOUND CARD [YOUR CUSTOM PROXY]</h2>
-            <h4 class="desc">If you draw me a Riftbound card, I will suck you off, eat you out, or both.</h4>
+            <h4 class="desc">Draw me a Riftbound card..? I also need card sleeves.</h4>
             <h3 class="moneyIcon">$</h3>
         </a>  
 
@@ -88,14 +88,14 @@
         <a class="item" href="https://x.com/andycollectz/status/1982921584324293000?s=46" target="_blank" rel="noopener">
             <img class="thumbnail" src="secretsanta-media/riftbound_worlds.png">
             <h2>RIFTBOUND STUFF</h2>
-            <h4 class="desc">I will blow you. This is something I WANT WANT.</h4>
+            <h4 class="desc">I will blow you. I also need card sleeves.</h4>
             <h3 class="moneyIcon">$$$$$$$$$$</h3>
         </a>              
 
         <a class="item" href="https://www.amazon.ca/gp/product/B0BLX8VW48/ref=ox_sc_act_title_1?smid=A29GE3J9QDHI9F&th=1" target="_blank" rel="noopener">
             <img class="thumbnail" src="https://m.media-amazon.com/images/I/616bJg2BZaL._AC_SY300_SX300_QL70_ML2_.jpg">
-            <h2>RIFTBOUND STUFF</h2>
-            <h4 class="desc">I need ipad pro 2018 A1980 11" accessories. like a new screen protector</h4>
+            <h2>IPAD PRO A1980 ACCESSORIES</h2>
+            <h4 class="desc">I need ipad pro 2018 A1980 11" accessories. like a new screen protector. i already have pen!</h4>
             <h3 class="moneyIcon">$$</h3>
         </a>              
 
