--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -29,14 +29,14 @@
             </div>          
             <div id="herocontainer">   
                 <div id="heroTitle">   
-                    <h1 id="architectureHeader" aria-label="ARCHITECTURE">
+                    <h1 id="architectureHeader" aria-label="Seoul International Architecture Film Festival">
                         <div id="hero-side">
                             <h2 class="hero-subhead1" id="seoulinternational">
-                                <img src="media/txt/seoulinternational.svg" alt="Seoul International">
+                                <img src="media/txt/seoulinternational.svg" alt="">
                             </h2>                                
                             <div id="archit">
-                                <img src="media/txt/ARC.svg" id="arc">
-                                <img src="media/txt/HIT.svg" id="hit">
+                                <img src="media/txt/ARC.svg" id="arc" alt="">
+                                <img src="media/txt/HIT.svg" id="hit" alt="">
                             </div>
                             <div id="spacer"> </div>
                         </div>
@@ -48,15 +48,15 @@
                         <div id="hero-side">
                         <div id="spacer"> </div>
                             <div id="ecture">   
-                                <img src="media/txt/ECT.svg" id="ect">
-                                <img src="media/txt/URE.svg" id="ure">
+                                <img src="media/txt/ECT.svg" id="ect" alt="">
+                                <img src="media/txt/URE.svg" id="ure" alt="">
                             </div>
                         <h2 class="hero-subhead1" id="filmFest">
-                            <img src="media/txt/filmfest.svg" alt="Film Festival">
+                            <img src="media/txt/filmfest.svg" alt="">
                         </h2>                               
                         </div>
                     </h1>  
-                    <h4 class="siaffRounded" id="prompt-1">- SCROLL DOWN -</h4>     
+                    <p class="siaffRounded" id="prompt-1">- SCROLL DOWN -</p>     
                 </div> 
             </div>
             <div class="fade" id="fadebottom">
@@ -120,7 +120,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                 <div id="award-box">
                     <div id="award-margins">
                         
-                        <aside id="award-left">
+                        <div id="award-left">
 
                             <div id="progressbar">
                                 <div id="bar1" class="bar"></div>
@@ -130,13 +130,13 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
 
                             <p class="notoRegular" id="awardParagraph">This piece represents commemorates the life and work of M.C Escher through architectural creativity in beautiful forms of brutalist optic illusions and homeliness.</p>
                         
-                        </aside>
+                        </div>
 
                         <!-- Need to make the 3d model -->
                         <figure id="award-center">
                             <model-viewer 
-                            src="models/texturedtower.glb"
-                            ios-src="models/compressedtower.usdz"
+                            src="models/pieceA/towerofescher.glb"
+                            ios-src="models/pieceA/towerofescher.usdz"
                             alt="Tower of Escher by Richard Lau"
                             camera-controls 
                             auto-rotate 
