--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -15,7 +15,13 @@
     <meta property="og:description" content="The Seoul International Architecture Film Festival (SIAFF) is an annual festival based in South Korea dedicated to showcasing films across the world about architecture, design, city planning, and urban development.">
     <meta property="og:image" content="https://richardlau.ca/media/type_specimen_mockup_concrete.png">
     <meta property="og:url" content="https://richardlau.ca/">
-    <meta property="og:type" content="website">    
+    <meta property="og:type" content="website">   
+    
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh;}
+      model-viewer { width: 100%; max-width: 100%; height: auto; }
+    </style>    
 </head>
 
 <body>
@@ -134,7 +140,8 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
 
                         <!-- Need to make the 3d model -->
                         <figure id="award-center">
-                            <model-viewer 
+                            <model-viewer
+                            id="award1" 
                             src="models/pieceA/towerofescher.glb"
                             ios-src="models/pieceA/towerofescher.usdz"
                             alt="Tower of Escher by Richard Lau"
