--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -20,7 +20,7 @@
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh;}
-      model-viewer { width: 100%; max-width: 100%; height: auto; }
+      model-viewer { width: 100%; max-width: 100%; height: 100%; }
     </style>    
 </head>
 
