--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -144,6 +144,9 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                             id="award1" 
                             src="models/pieceA/towerofescher.glb"
                             ios-src="models/pieceA/towerofescher.usdz"
+                            environment-image="neutral"
+                            shadow-intensity="2"
+                            shadow-softness="0.8"                            
                             alt="Tower of Escher by Richard Lau"
                             camera-controls 
                             auto-rotate 
