--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -19,7 +19,6 @@
     
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
-      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh;}
       model-viewer { width: 100%; max-width: 100%; height: 100%; }
     </style>    
 </head>
@@ -147,7 +146,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                             environment-image="neutral"
                             shadow-intensity="1"
                             shadow-softness="0.8"
-                            environment-image="models/lightbox.png"                            
+                            environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
                             alt="Tower of Escher by Richard Lau"
                             camera-controls 
                             auto-rotate 
