--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -145,6 +145,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                             ios-src="models/pieceA/towerofescher.usdz"
                             shadow-intensity="1"
                             shadow-softness="0.8"
+                            rotation="45 0 0"
                             environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
                             alt="Tower of Escher by Richard Lau"
                             camera-controls 
