--- a/yorku/desn3005/arexperience.html
+++ b/yorku/desn3005/arexperience.html
@@ -19,20 +19,26 @@
 
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
-      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #ffffff; }
-      model-viewer { width: 100%; max-width: 100%; height: 80vh; }
+      body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #232323; }
+      model-viewer { width: 100%; max-width: 100%; height: 100vh; }
     </style>    
   </head>
 
   <body>
-    <model-viewer 
-      src="texturedtower.glb"
-      ios-src="compressedtower.usdz"
-      alt="Tower of Escher by Richard Lau"
-      camera-controls 
-      auto-rotate 
-      ar 
-      ar-modes="webxr scene-viewer quick-look">
-    </model-viewer>
+    <figure id="award-center">
+        <model-viewer
+        id="award1" 
+        src="siaff/models/pieceA/towerofescher.glb"
+        ios-src="siaff/models/pieceA/towerofescher.usdz"
+        shadow-intensity="1"
+        shadow-softness="0.8"
+        environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
+        alt="Tower of Escher by Richard Lau"
+        camera-controls 
+        auto-rotate 
+        ar 
+        ar-modes="webxr scene-viewer quick-look">
+        </model-viewer>
+    </figure>
   </body>
 </html>
