--- a/yorku/desn3005/ar-experience-3.html
+++ b/yorku/desn3005/ar-experience-3.html
@@ -26,18 +26,18 @@
 
   <body>
     <model-viewer
-      class="switch-model2"
+      class="switch-model3"
       id="award1" 
-      src="models/pieceB/cafenbars.glb"
-      ios-src="models/pieceB/cafenbars.usdz"
+      src="models/pieceC/abstractpillar.glb"
+      ios-src="models/pieceC/abstractpillar.usdz"
       shadow-intensity="1"
       shadow-softness="0.8"
       environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
-      alt="Cafe N Bars by Jinny Jeon"
+      alt="Abstraction by Shisays Condi"
       camera-controls 
       auto-rotate 
       ar 
       ar-modes="webxr scene-viewer quick-look">
-    </model-viewer>  
+    </model-viewer>     
   </body>
 </html>
