--- a/yorku/desn3005/ar-experience-2.html
+++ b/yorku/desn3005/ar-experience-2.html
@@ -28,8 +28,8 @@
     <model-viewer
       class="switch-model2"
       id="award1" 
-      src="models/pieceB/cafenbars.glb"
-      ios-src="models/pieceB/cafenbars.usdz"
+      src="siaff/models/pieceB/cafenbars.glb"
+      ios-src="siaff/models/pieceB/cafenbars.usdz"
       shadow-intensity="1"
       shadow-softness="0.8"
       environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
