--- a/yorku/desn3005/ar-experience-3.html
+++ b/yorku/desn3005/ar-experience-3.html
@@ -28,12 +28,12 @@
     <model-viewer
       class="switch-model3"
       id="award1" 
-      src="models/pieceC/abstractpillar.glb"
-      ios-src="models/pieceC/abstractpillar.usdz"
+      src="siaff/models/pieceC/abstractpillar.glb"
+      ios-src="siaff/models/pieceC/abstractpillar.usdz"
       shadow-intensity="1"
       shadow-softness="0.8"
       environment-image="https://richardlau.ca/yorku/desn3005/siaff/models/lightbox.png"                            
-      alt="Abstraction by Shisays Condi"
+      alt="Pillars by Shisays Condi"
       camera-controls 
       auto-rotate 
       ar 
